--- a/JD/package.json
+++ b/JD/package.json
@@ -1,11 +1,25 @@
 {
     "name": "komoleijd",
     "version": "1.0.0",
-    "description": "",
-    "main": "shangke.js",
+    "description": "design of JD",
+    "main": "gulpfile.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "komolei",
-    "license": "ISC"
+    "license": "ISC",
+    "keywords": [
+        "JD，komolei"
+    ],
+    "dependencies": {
+        "gulp": "^3.9.1"
+    },
+    "devDependencies": {
+        "gulp": "^3.9.1",
+        "gulp-autoprefixer": "^4.0.0",
+        "gulp-cssnano": "^2.1.2",
+        "gulp-htmlmin": "^3.0.0",
+        "gulp-postcss": "^7.0.0",
+        "gulp-uglify": "^3.0.0"
+    }
 }
